--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,13 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.12'
 //    firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+
+//    firebase
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+
+//    firebase recycler
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+
+//    auth
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
 }
